apps/base/media/prowlarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  selector:
    app: prowlarr
  ports:
    - name: http
      targetPort: 9696
      port: 9696
