apps/base/media/prowlarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.${DOMAIN_INTERNAL}`)
      kind: Rule
      services:
        - name: prowlarr
          port: http

  tls:
    secretName: ${CERT_SECRET_INTERNAL}
